--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2016-12-11
+    %ul
+      %li Update to Rails 5.0.0.1
+
     %h4.update-date 2016-01-17
     %ul
       %li Disable the file backup option on iOS devices because there is no way to store an arbitrary file
