update versions page

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,9 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
-    %h4.update-date 2016-12-11
+    %h4.update-date 2017-04-03
     %ul
-      %li Update to Rails 5.0.0.1
+      %li Update to Rails 5.0.2
+      %li Remove Bitcoin donation address
 
     %h4.update-date 2016-01-17
     %ul
