--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -38,7 +38,7 @@
           %p
             Passmaster is designed to store usernames and passwords for all the websites you use but can store
             other related information as well. There's space for account numbers, security questions, website
-            URLs, or anything else you else you might need.
+            URLs, or anything else you might need.
       .feature.pull-left
         .feature-inner
           %h5
