update SJCL to 1.0.7

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,12 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2017-09-11
+    %ul
+      %li
+        Updated the
+        %a{ :target => '_blank', :href => 'https://bitwiseshiftleft.github.io/sjcl/' } Stanford Javascript Crypto Library to 1.0.7
+
     %h4.update-date 2017-04-03
     %ul
       %li Update to Rails 5.0.2
