--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2018-12-08
+    %ul
+      %li Add support for unlocking accounts using Face ID in the iOS app
+
     %h4.update-date 2018-06-19
     %ul
       %li Update to Rails 5.0.7
