add changelog to the updates page and upgrade a few gems

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2020-01-05
+    %ul
+      %li Add support for unlocking accounts using biometrics in the Android app (Thanks Scott Satkin!)
+
     %h4.update-date 2019-03-15
     %ul
       %li Update to Rails 5.0.7.2 - CVE-2019-5419, CVE-2019-5418
