--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2021-02-04
+    %ul
+      %li Increase the height of the notes field when adding/editing an account
+
     %h4.update-date 2020-01-05
     %ul
       %li Add support for unlocking accounts using biometrics in the Android app (Thanks Scott Satkin!)
