--- a/app/views/application/accounts_viewer.html.haml
+++ b/app/views/application/accounts_viewer.html.haml
@@ -17,13 +17,37 @@
       }
 
     :javascript
+      // helper to sort account objects by account name
+      function compareByAccountName(a, b) {
+        var nameA = a['account'].toUpperCase();
+        var nameB = b['account'].toUpperCase();
+
+        if (nameA < nameB) {
+          return -1;
+        }
+        if (nameA > nameB) {
+          return 1;
+        }
+
+        return 0;
+      };
+
       // called when the form is submitted
       function formSubmitted() {
         // read the password
         var password = document.getElementById('backup_password').value;
+        if (password.length == 0) {
+          alert('Please enter a Backup Password.');
+          return;
+        }
 
         // use a FileReader object to read the contents of the backup file
         var file = document.getElementById('backup_file').files[0];
+        if (typeof file == 'undefined') {
+          alert('Please select a Backup File.');
+          return;
+        }
+
         var reader = new FileReader();
         reader.onload = (function(evt) {
           // call the decrypt function passing in the supplied password and the contents of the backup file
@@ -79,14 +103,22 @@
 
       // fills the table with accounts
       function showAccounts(accounts) {
+        var accountsAry = [];
+        for (accountId in accounts) {
+          accountsAry.push(accounts[accountId]);
+        }
+        accountsAry.sort(compareByAccountName);
+
         var table = document.getElementById('accounts_table');
         var html = '';
 
         var columns = [];
-        for (accountId in accounts) {
+        for (var j = 0; j < accountsAry.length; j++) {
+          var account = accountsAry[j];
+
           if (columns.length == 0) {
             html += '<tr>';
-            for (column in accounts[accountId]) {
+            for (column in account) {
               columns.push(column);
               html += '<th>' + column + '</th>';
             }
@@ -95,7 +127,7 @@
 
           html += '<tr>';
           for (var i = 0; i < columns.length; i++) {
-            var str = accounts[accountId][columns[i]];
+            var str = account[columns[i]];
 
             // html-escape the string
             var div = document.createElement('div');
@@ -116,7 +148,7 @@
     %p It works without internet access and serves as documentation of the host-proof encryption scheme.
     %p **NOTE** This does not sync with the Passmaster servers and you cannot add, edit, or delete accounts.
 
-    %form#backup_form{ :enctype => 'multipart/form-data', :onsubmit => 'formSubmitted(); return false;' }
+    %form#backup_form{ :method => 'POST', :enctype => 'multipart/form-data', :onsubmit => 'formSubmitted(); return false;' }
       .field
         %label{ :for => 'backup_file' } Backup File
         %input#backup_file{ :name => 'file', :type => 'file', :accept => 'text/plain' }
