use the email and url keyboards on the username and website url fields, respectively

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -109,11 +109,11 @@
                   %tr
                     %td.field-label W:
                     %td
-                      %input.url.input-block-level{ :type => 'text', :name => 'url', :placeholder => 'Website URL', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
+                      %input.url.input-block-level{ :type => 'url', :name => 'url', :placeholder => 'Website URL', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
                   %tr
                     %td.field-label U:
                     %td
-                      %input.username.input-block-level{ :type => 'text', :name => 'username', :placeholder => 'Username', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
+                      %input.username.input-block-level{ :type => 'email', :name => 'username', :placeholder => 'Username', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
                   %tr
                     %td.field-label P:
                     %td
