--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2021-05-04
+    %ul
+      %li Use the "email" and "url" keyboards on the "Username" and "Website URL" fields, respectively
+
     %h4.update-date 2021-02-04
     %ul
       %li Increase the height of the notes field when adding/editing an account
