--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -76,7 +76,7 @@
       text-align: right;
       padding-right: 3px;
     }
-    input[type='text'] {
+    input[type='text'],input[type='url'],input[type='email'] {
       margin: 0;
     }
     .click-to-copy-username,.click-to-copy-password {
@@ -119,7 +119,7 @@
       text-align: right;
       padding-right: 3px;
     }
-    form,input[type='text'],input[type='url'],textarea {
+    form,input[type='text'],input[type='url'],input[type='email'],textarea {
       margin: 0;
     }
     input.username,input.password {
