fix incorrect validation that was forcing usernames to be email addresses

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -99,7 +99,7 @@
                     .notes{ :style => 'display:none;' }
                       %p.notes
           .write
-            %form
+            %form{ :novalidate => true }
               %table
                 %tbody
                   %tr
