--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,14 +4,18 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2021-05-24
+    %ul
+      %li Fix incorrect validation of "Username" field, usernames are not required to be email addresses (Thanks Ryan McCarthy!)
+
     %h4.update-date 2021-05-04
     %ul
-      %li Use the "email" and "url" keyboards on the "Username" and "Website URL" fields, respectively (Thanks for the suggestion Mark K!)
+      %li Use the "email" and "url" keyboards on the "Username" and "Website URL" fields, respectively (Thanks Mark K!)
       %li Sort accounts in the backup viewer by name (Thanks for the suggestion Mark K!)
 
     %h4.update-date 2021-02-04
     %ul
-      %li Increase the height of the notes field when adding/editing an account (Thanks for the suggestion Shannon Z!)
+      %li Increase the height of the notes field when adding/editing an account (Thanks Shannon Zemantauski!)
 
     %h4.update-date 2020-01-05
     %ul
