Automatically unlock accounts with biometrics on mobile app launch

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2022-02-05
+    %ul
+      %li Automatically unlock accounts with biometrics on mobile app launch (requires iOS app version 1.6 or Android app version 1.8)
+
     %h4.update-date 2021-05-24
     %ul
       %li Fix incorrect validation of "Username" field, usernames are not required to be email addresses (Thanks Ryan McCarthy!)
