re-enable offline support by replacing deprecated AppCache with Service Workers

--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -29,8 +29,8 @@
               and iOS on the
               = succeed '.' do
                 %a{ :target => '_blank', :href => 'https://itunes.apple.com/us/app/passmaster/id615271561?mt=8' } App Store
-              The mobile apps provide single-tap copy to clipboard of usernames and passwords and the iOS app allows unlocking
-              via Touch ID.
+              The mobile apps provide single-tap copy to clipboard of usernames/passwords and unlocking
+              via biometrics.
         .feature-inner
           %h5
             %i.icon.icon-briefcase
@@ -72,7 +72,7 @@
             %i.icon.icon-plane
             Offline Access
           %p
-            Passmaster uses HTML5 application caching and local storage to make your account details accessible
+            Passmaster uses service workers and local storage to make your account details accessible
             even while you are offline. Your data is automatically synced each time you use Passmaster ensuring it is
             available whenever you need it.
       .feature.pull-left
