--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,9 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
-    %h4.update-date 2022-02-05
+    %h4.update-date 2022-02-08
     %ul
       %li Automatically unlock accounts with biometrics on mobile app launch (requires iOS app version 1.6 or Android app version 1.8)
+      %li Update offline support to use Service Workers instead of HTML5 AppCache as it is now deprecated in all browsers.
 
     %h4.update-date 2021-05-24
     %ul
