--- a/app/assets/stylesheets/overview.css.scss
+++ b/app/assets/stylesheets/overview.css.scss
@@ -4,7 +4,7 @@
   }
 
   .icon-passmaster {
-    background-image: url('/img/combination-32.png');
+    background-image: url(image_path('combination-32.png'));
     background-position: 0;
     width: 32px;
     height: 32px;
