--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2022-12-14
+    %ul
+      %li The jquery-rails gem was updated to depend on version 1.2.3 of jquery-ujs which caused some minor changes to Passmaster's javascript libraries. No actual changes to the functionality of Passmaster.
+
     %h4.update-date 2022-02-08
     %ul
       %li Automatically unlock accounts with biometrics on mobile app launch (requires iOS app version 1.6 or Android app version 1.8)
