--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2023-04-18
+    %ul
+      %li The sprockets gem was updated to the latest version which caused some changes to the way Passmaster's javascripts and stylesheets are compiled. No actual changes to the functionality of Passmaster.
+
     %h4.update-date 2022-12-14
     %ul
       %li The jquery-rails gem was updated to depend on version 1.2.3 of jquery-ujs which caused some minor changes to Passmaster's javascript libraries. No actual changes to the functionality of Passmaster.
