update release notes

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2023-07-05
+    %ul
+      %li Gem updates. No actual changes to the functionality of Passmaster.
+
     %h4.update-date 2023-04-18
     %ul
       %li The sprockets gem was updated to the latest version which caused some changes to the way Passmaster's javascripts and stylesheets are compiled. No actual changes to the functionality of Passmaster.
